@startuml
'https://plantuml.com/class-diagram

class Voltage220V {
    +output220V():int
}
interface Voltage5V {
    +output5V():int
}
class VoltageAdapter extends Voltage220V implements Voltage5V {
    +output5V():int
}
class Client
class phone{
    charging():void
}
Client ..> VoltageAdapter: 依赖
Client ..> phone: 依赖
phone ..> Voltage5V: 依赖
@enduml